# musical_structure_metrics

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: main.yml  pypi-readme-sync.yml  sync-hf.yml  sync-readme.yml
structure_derivation/: __init__.py
structure_derivation/inference/: batch_inference.py  inference.py
structure_derivation/model/: htsat.py  model.py
structure_derivation/notebooks/: explorer.ipynb
