[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structure_derivation"
version = "0.1.0"
description = "Metrics for Musical Structure"
authors = [
    {name = "Keshav Bhandari", email = "keshavbhandari@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}

# Dependencies
dependencies = [
    "transformers @ git+https://github.com/huggingface/transformers",
    "accelerate",
    "peft",
    "torchlibrosa",
    "librosa",
    "tensorboard",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["structure_derivation", "structure_derivation.*"]

[tool.setuptools.exclude-package-data]
"structure_derivation" = ["artifacts/*"]